@@ -1,5 +1,10 @@
 2016-11-11  Bruno Haible  <bruno@clisp.org>
 
+	Modernize: Remove support for Amiga UNIX.
+	* lispbibl.d (UNIX_AMIX): Remove macro.
+
+2016-11-11  Bruno Haible  <bruno@clisp.org>
+
 	Modernize: Remove support for Apple A/UX.
 	* lispbibl.d (UNIX_AUX): Remove macro.
 	* unix.d: Remove Apple A/UX workaround.
